# kite_detector

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  makefile  pyproject.toml
common/: schemas.py  utils.py
common/db/: db_interface.py
common/io/: annotate.py  capture.py
common/sql/: create_image_metadata.sql  create_serving_prediction.sql  insert_image_metadata.sql  insert_serving_prediction.sql  query_last_images_for_webapp.sql  query_last_images_last_30min.sql  remove_missing_rows.sql  sql_queries.sql
config/: base.yaml  config_loader.py  dev.yaml  prod.yaml  test.yaml
serving/: capture_task.py  main.py  model.py
serving/routes/: binary_kite_sensor.py  favicon.py  health.py  home.py  predict.py
serving/templates/: binary_kite_sensor.html  home.html
serving/tests/: conftest.py  test_predict_endpoint.py
training/: README.md  benchmark.py  create_dataset_spot_detector.py  model.py  trainer.py
training/common/: mlflow_utils.py
